updated game dsiplay - roll buttons aligning correctly

--- a/app/public/css/stylesheet.css
+++ b/app/public/css/stylesheet.css
@@ -116,6 +116,10 @@ body {
   padding: 10px 20px;
   font-weight: bold;
 }
+.buttons {
+  text-align: left;
+  padding: 25px;
+}
 
 
 /*
